--- a/javascripts/components/accordion/accordion.css
+++ b/javascripts/components/accordion/accordion.css
@@ -1,22 +1,23 @@
 .box, 
 .acc-pane {
   background: #fff;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
+  border: 1px solid #e6e6e6;
+  margin-bottom: 7px;
   padding: 0 10px;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  -ms-border-radius: 7px;
-  -o-border-radius: 7px;
-  border-radius: 7px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
 }
 .acc-pane > h3 {
   cursor: pointer;
-  font-size: 12px;
+  font-size: 14px;
   display: block;
   font-weight: normal;
   margin: 0;
-  line-height: 40px;
+  padding: 0 2px;
+  line-height: 38px;
   color: #0099ff;
 }
 .acc-pane > h3:before {
@@ -28,6 +29,7 @@
   width: 22px;
   height: 23px;
   display: inline-block;
+  margin-top: -2px;
   margin-right: 5px;
   vertical-align: middle;
 }
@@ -36,37 +38,37 @@
   text-decoration: underline;
 }
 .acc-pane > h3:hover:before {
-  background-position: 0 -19px;
+  background-position: 0 -85px;
 }
 .acc-pane > h3:acc-active:before {
   background-position: 0 -41px;
 }
-.acc-pane.acc-active {
-  cursor: auto !important;
+.acc-pane.acc-active > h3 {
+  color: #3a3a3a;
+  cursor: auto;
 }
-.acc-pane.acc-active h3 {
-  color: #373737;
-}
-.acc-pane.acc-active h3:before {
+.acc-pane.acc-active > h3:before {
   background-position: 0 3px;
 }
-.acc-pane.acc-active h3:hover {
+.acc-pane.acc-active > h3:hover {
   text-decoration: none;
 }
-.acc-pane.acc-active h3:hover.acc-active:before {
-  background-position: 0 -107px;
+.acc-pane.acc-active > h3:hover:before {
+  background-position: 0 3px;
 }
 .acc-pane .acc-content {
-  border-top: 1px solid #ddd;
-  padding: 10px 28px;
+  border-top: 1px solid #e5e5e5;
+  padding: 15px 5px 5px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .acc-pane .acc-content input {
-  margin-right: 10px;
+	margin-right: 10px;
 }
 
 .acc-pane .acc-content > p {
-  font-size: 12px;
   margin-bottom: 10px;
   font-weight: normal;
   color: #737373;
