--- a/stylesheets/buttons.css
+++ b/stylesheets/buttons.css
@@ -26,7 +26,7 @@
 }
 .btn.upgrade,
 .btn.default {
-  background-image: url('../../images/bg-gradient.png');
+  background-image: url('./images/bg-gradient.png');
   background-color: transparent;
   color: #848484;
   border-color: #ddd;
