--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -3,10 +3,13 @@ body {
   background: #FDFDFD;
   font-family: "Arial", sans-serif;
 }
+input {
+  color: #373737;
+}
 p {
   line-height: 17px;
-  color: #484848;
-  font-size: 12px;
+  color: #3a3a3a;
+  font-size: 14px;
 }
 a {
   color: #09F;
